Fix gap bwetten attraction cards

--- a/app/assets/stylesheets/attraction.scss
+++ b/app/assets/stylesheets/attraction.scss
@@ -1,12 +1,8 @@
 .attraction{ 
-  width: 350px;
+  width: 360px;
 
   &:hover{
     box-shadow: 1px 1px 10px #949494;
-  }
-
-  @media screen and (max-width: 720px) {
-    width: 100%;
   }
 }
 
